JOC-2206 - changed to use automatic db UTC timestamp:  deployment